Final Second Changes

--- a/src/Common/css/global.scss
+++ b/src/Common/css/global.scss
@@ -2,7 +2,7 @@
 | Fonts
 ---------------------------*/
 // @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Style+Script&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
 /*---------------------------
@@ -33,11 +33,16 @@ body.modal-open {
 }
 
 h1,
-h2,
 h3,
 h4,
 h5,
 h6 {
+    // font-family: "Roboto", sans-serif;
+    font-family: "Montserrat", sans-serif;
+    margin: 0px 0px 15px;
+    color: #99403a;
+}
+h2 {
     // font-family: "Roboto", sans-serif;
     font-family: "Montserrat", sans-serif;
     margin: 0px 0px 15px;
