Changes to Final 2

--- a/src/Common/css/global.scss
+++ b/src/Common/css/global.scss
@@ -49,6 +49,7 @@ h2 {
     color: #99403a;
 }
 p {
+    font-family: Arial, Helvetica, sans-serif;
     margin: 20px 5px 15px;
     font-size: 14px;
     text-align: center;
@@ -56,6 +57,7 @@ p {
 }
 
 li {
+    font-family: Arial, Helvetica, sans-serif;
     color: #545932;
     font-size: 14px;
     margin-bottom: 5px;
